master
- mayhem
  fix locked thread icons with fit width/screen enabled on Firefox

2.21.2
- mayhem
  fix time formatting year in Opera
  fix QR keybinds
  fix QR posts getting swallowed by sys.4chan.org

2.21.1
- mayhem
  fix Opera

2.21.0
- mayhem
  initiate 4chan X earlier
  performance improvements
  regular expressions based filter
  remove image preloading
  automatically reload expanded pictures on error
  handle bans with the thread updater
  use unread favicons by ferongr

2.20.3
- mayhem
  fix DST for two days of the year

2.20.2
- mayhem
  update archive redirection
- aeosynth
  hopefully fix qr error / update messages
  rm support throd link

2.20.1
- mayhem
  fix regression: qr not preventing errors

2.20.0
- mayhem
  do not display inlined quotes within the quote preview
  fix cross threads quotes in expanded threads or inlined cross quotes
  default post styling for quote previews
- aeosynth
  script auto updating

2.19.3
- mayhem
  quote inlining default styling (by xat)
  add up/down/right/left keybinding support
- aeosynth
  fixed bug that caused script to fail when time formatting enabled

2.19.2
- mayhem
  update archives redirections
- aeosynth
  change unread favicons (by xat-)

2.19.1
- mayhem
  fix OP indication in expanded comments
  fix no.id links within cross thread/board inlined quote

2.19.0
- mayhem
  backlink formatting
  distinguishable unread favicons on white backgrounds
  fix updater refreshing 404'd threads
  fix backlinks added into inlined quotes
- aeosynth
  fix tab title for 404d threads

2.18.3
- mayhem
  fix quote features in expanded comments
  fix scrolling onto a quote not showing the preview

2.18.2
- aeosynth:
  fix long thread watcher titles
  fix normal form errors with an open empty QR

2.18.1
- mayhem:
  fix persistent qr not cleaning the file input
- aeosynth:
  updater: scroll background tabs

2.18.0
- mayhem:
  back to normal versioning
  bring back auto posting
  don't start the cooldown on thread creation